<resources>
    <string name="app_name">Book of countries</string>
    <string name="error_internet_not_available">Интернет не доступен</string>
    <string name="error_server_not_available">Сервер не доступен</string>
    <string name="error_server">Серверная ошибка</string>
    <string name="error">Непредвиденная ошибка</string>
    <string name="capital">Capital:</string>
    <string name="region">Region:</string>
    <string name="language">Language:</string>
    <string name="currency">Currency:</string>
    <string name="block">Block:</string>
    <string name="population">Population:</string>
    <string name="area">Area:</string>
    <string name="calling_code">Calling code:</string>
    <string name="domain">Domain:</string>
    <string name="time_zone">Time zone:</string>

</resources>
